--- a/actu-responsible/app/views/index.pug
+++ b/actu-responsible/app/views/index.pug
@@ -1,37 +1,25 @@
 extends layout/layout.pug
  
 block utm 
-  - var meta =  Data.meta._utmActuFr;   
-  - var type = 'engrais';     
-  - var lang = 'be';       
+  - var meta =  Data.meta._utmTerrenet;   
+  - var type = 'elevage';     
+  - var lang = 'fr';        
      
  
 block style
   link(rel='stylesheet', href='css/style.css') 
   style.
-    * {
-    font-family: Helvetica, Arial, sans-serif;
-    }
-    .footer__col td{
-    font-size: 12px!important;
-    }
-    .mobile--show{
-    display: none;
-    }
     @media only screen and (max-width: 480px) {
     .logo__white,
     .products__between,
     .mobile--hide {
     display: none!important;
     }
-    .mobile--show {
-    display: block;
-    }
-    #bodyTable{
-    width: 100%; 
+    #bodyTable {
+    width: 100%;
     }
     .menu__links {
-    height: auto; 
+    height: auto;
     }
     .menu__link {
     display: block;
@@ -53,9 +41,7 @@ block style
     }
     .logoM {
     display: block !important;
-    max-width: 100%;
-    width: 100%!important;
-    height: 
+    width: 100%;
     }
     .actu__wrapper td {
     display: table;
@@ -133,88 +119,107 @@ block style
     width: 98%;
     display: block;
     }
+    .tableau__3 tr td,
+    .tableau__3 tbody,
+    .tableau__3 tr,
+    .tableau__3 table {
+    width: 100%!important;
+    display: block!important;
     }
-
+    .tableau__3 td {
+    line-height: 24px!important;
+    font-size: 12px!important;
+    }
+    .tableau__3 .data--elevage {
+    line-height: 50px!important;
+    }
+    }
+    * {
+    font-family: Helvetica, Arial, sans-serif;
+    }
+    .footer__col td {
+    font-size: 12px!important;
+    }
 
 block phraseAccroche
   | Nouvelle campagne disponible
 
 block header
   include mixins/header.pug
-  +header('margaux')
+  +header('bertrand')
 
 block data
   include mixins/elemMarche.pug
-  +elemMarche('Azotés :', "Les prix en Urée ont été annoncés pour des livraison pendant l’été et il semblerait que la hausse en 2 mois soit de plus de 40€/t. Les acteurs ne prennent aucun risque et ne s’engagent pas sur des prix. Cette hausse a été très brutale et nous attendons toujours une tendance de prix. <br><br> En solution azotée le marché est haussier entraîné par l'urée, la parité ainsi que l’offre et la demande. <br><br> Le cours de l’ammonitrate est également haussier. Les volumes disponibles seront faibles. ")
-  +elemMarche('Phosphore et Potasse :', "Les premiers prix en DAP ont été publiés pour des livraisons cet été avec une hausse de 10 à 20€/t en fonction du départ. <br><br> La hausse du TSP se poursuit avec une influence forte de la parité euro dollar. La faible disponibilité du produit pourra également avoir un rôle et entraîner une hausse.")
+  //- +elemMarche('Azotés :', "Les prix en Urée ont été annoncés pour des livraison pendant l’été et il semblerait que la hausse en 2 mois soit de plus de 40€/t. Les acteurs ne prennent aucun risque et ne s’engagent pas sur des prix. Cette hausse a été très brutale et nous attendons toujours une tendance de prix. <br><br> En solution azotée le marché est haussier entraîné par l'urée, la parité ainsi que l’offre et la demande. <br><br> Le cours de l’ammonitrate est également haussier. Les volumes disponibles seront faibles. ")
+  //- +elemMarche('Phosphore et Potasse :', "Les premiers prix en DAP ont été publiés pour des livraisons cet été avec une hausse de 10 à 20€/t en fonction du départ. <br><br> La hausse du TSP se poursuit avec une influence forte de la parité euro dollar. La faible disponibilité du produit pourra également avoir un rôle et entraîner une hausse.")
 
 block stat
   include mixins/elemStat.pug
-  +elemStat('Azotés',
-   'À la hausse' ,
-     'https://www.agriconomie.com/media/pub/img/newsletter/icons/hausse.jpeg',
-        'engrais/engrais-azote/pc979' + meta,
-    'À la Hausse')
-  +elemStat('Potasse',
-    'À la hausse' , 
-     'https://www.agriconomie.com/media/pub/img/newsletter/icons/hausse.jpeg',
-         'engrais/autres-engrais/engrais-potassique/pc3428' + meta,
-     'À la hausse')
-  +elemStat('Phosphore',
-   'À la hausse' , 
-   'https://www.agriconomie.com/media/pub/img/newsletter/icons/hausse.jpeg',
-   'engrais/autres-engrais/engrais-phosphate/pc3426' + meta,
-    'À la Hausse')
+  //- +elemStat('Azotés',
+  //-  'À la hausse' ,
+  //-    'https://www.agriconomie.com/media/pub/img/newsletter/icons/hausse.jpeg',
+  //-       'engrais/engrais-azote/pc979' + meta,
+  //-   'À la Hausse')
+  //- +elemStat('Potasse',
+  //-   'À la hausse' , 
+  //-    'https://www.agriconomie.com/media/pub/img/newsletter/icons/hausse.jpeg',
+  //-        'engrais/autres-engrais/engrais-potassique/pc3428' + meta,
+  //-    'À la hausse')
+  //- +elemStat('Phosphore',
+  //-  'À la hausse' , 
+  //-  'https://www.agriconomie.com/media/pub/img/newsletter/icons/hausse.jpeg',
+  //-  'engrais/autres-engrais/engrais-phosphate/pc3426' + meta,
+  //-   'À la Hausse')
 
 
 block preco
   include mixins/title.pug
-  tr
-    td.data__blank
+  //- tr
+  //-   td.data__blank
 
-  tr
-    td L’optimisation des traitements est un levier important dans l’atteinte des objectifs culturaux.
-  tr
-    td.data__blank
-  tr
-    td Pour ce faire,  ECO PH est un engrais foliaire spécifique 3 en 1.
-  tr
-    td.data__blank
-  tr
-    td Polyvalent, il va s’adapter aux eaux dures à pH élevé, et permettre d’optimiser la qualité de traitement, et ce même dans des conditions extrêmes de pH et de dureté.
-  tr
-    td.data__blank
-  tr
-    td ECO PH est LA solution clef pour optimiser en toute tranquillité pH + Dureté + Hygroscopie. Ces caractéristiques en font un partenaire synergique pour vos traitement. 
-  tr
-    td.data__blank
-  tr
-    td Dose conseillée à partir de 1 %
-  tr
-    td.data__blank
-  +title('Les préconisations de Margaux')
-  tr
-    td 
-      |- Venez découvrir nos semences et nos mélanges de couverts ainsi que nos offres spéciales colza 
-      a.link__actu(href!="https://www.agriconomie.com/melange-colza-fix-quatro-gflv/p282904" + meta) fix trio GLF 
-      | et  
-      a.link__actu(href!="https://www.agriconomie.com/melange-colza-fix-trio-glf/p282902" + meta ) fix quatro GLFV
-  tr
-    td.data__blank
-  tr
-    td 
-      | - Il n'est pas trop tard pour venir couvrir vos besoins en 
-      a.link__actu(href!="https://www.agriconomie.com/search?hierarchicalMenu%5Bcategories.lvl0%5D=Engrais&query=engrais%20organique&page=2&configure%5BhitsPerPage%5D=24&" + meta ) engrais organiques 
-      | pour apporter de l’humus et éléments fertilisants.
-  tr
-    td.data__blank
-  tr
-    td 
-      |- Suite aux nombreuses précipitations des derniers jours, apportez de 
-      a.link__actu(href!="https://www.agriconomie.com/soufre-n/p265436" + meta ) l'azote et du soufre
-      | , ou un engrais complet 
-      a.link__actu(href!="https://www.agriconomie.com/agri-forcenpk/p333370" + meta ) NPK
-      |  par voie foliaire pour complémenter les besoins de vos cultures.
+  //- tr
+  //-   td L’optimisation des traitements est un levier important dans l’atteinte des objectifs culturaux.
+  //- tr
+  //-   td.data__blank
+  //- tr
+  //-   td Pour ce faire,  ECO PH est un engrais foliaire spécifique 3 en 1.
+  //- tr
+  //-   td.data__blank
+  //- tr
+  //-   td Polyvalent, il va s’adapter aux eaux dures à pH élevé, et permettre d’optimiser la qualité de traitement, et ce même dans des conditions extrêmes de pH et de dureté.
+  //- tr
+  //-   td.data__blank
+  //- tr
+  //-   td ECO PH est LA solution clef pour optimiser en toute tranquillité pH + Dureté + Hygroscopie. Ces caractéristiques en font un partenaire synergique pour vos traitement. 
+  //- tr
+  //-   td.data__blank
+  //- tr
+  //-   td Dose conseillée à partir de 1 %
+  //- tr
+  //-   td.data__blank
+  //- +title('Les préconisations de Margaux')
+  //- tr
+  //-   td 
+  //-     |- Venez découvrir nos semences et nos mélanges de couverts ainsi que nos offres spéciales colza 
+  //-     a.link__actu(href!="https://www.agriconomie.com/melange-colza-fix-quatro-gflv/p282904" + meta) fix trio GLF 
+  //-     | et  
+  //-     a.link__actu(href!="https://www.agriconomie.com/melange-colza-fix-trio-glf/p282902" + meta ) fix quatro GLFV
+  //- tr
+  //-   td.data__blank
+  //- tr
+  //-   td 
+  //-     | - Il n'est pas trop tard pour venir couvrir vos besoins en 
+  //-     a.link__actu(href!="https://www.agriconomie.com/search?hierarchicalMenu%5Bcategories.lvl0%5D=Engrais&query=engrais%20organique&page=2&configure%5BhitsPerPage%5D=24&" + meta ) engrais organiques 
+  //-     | pour apporter de l’humus et éléments fertilisants.
+  //- tr
+  //-   td.data__blank
+  //- tr
+  //-   td 
+  //-     |- Suite aux nombreuses précipitations des derniers jours, apportez de 
+  //-     a.link__actu(href!="https://www.agriconomie.com/soufre-n/p265436" + meta ) l'azote et du soufre
+  //-     | , ou un engrais complet 
+  //-     a.link__actu(href!="https://www.agriconomie.com/agri-forcenpk/p333370" + meta ) NPK
+  //-     |  par voie foliaire pour complémenter les besoins de vos cultures.
 
 
 block produits
@@ -223,99 +228,177 @@ block produits
   include mixins/produit_4.pug
   include mixins/title.pug
   include mixins/banner.pug
+  
+
+   
+  +banner("publi/milkypro-parrainage", "https://www.agriconomie.com/media/pub/img/newsletter//banners/s25-2018-100-gamme-nutri.jpg", "Milky pro Parrainez et économisez 50€ HT sur votre prochaine commande")
 
   tr
-    td &nbsp;
-  +title("Notre sélection de produit")
-  tr
-    td &nbsp;
+    td &nbsp; 
 
-  +produit__4([ 
-
-
-            {'name': "Gamme <br> chaux vive engrais <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': ' -10%' ,
-     'link' : 'search?hierarchicalMenu%5Bcategories.lvl0%5D=Engrais&query=chaux+vive+engrais&',
-    'alt' : "Gamme chaux vive engrais ", 
-     'img' : 'https://www.agriconomie.com/media/pub/img/newsletter/products/chaux.jpg',
-     'btn' : 'Voir les produits'  },
-
-
-       {'name': "9-23-0 +25SO3 <br> Bulk granulé <br> &nbsp;",
-   'promo__title': "PROMO",
-    'promo__value': '-2€/T' ,
-     'link' : '9-23-0-25so3/p340869',
-    'alt' : "9-23-0 +25SO3 - Bulk granulé", 
-     'img' : 'https://www.agriconomie.com/media/cache/130x130//4f/5e/2f434099978c9dd4be25194dcd5e.jpeg',
-     'btn' : 'voir les prix'  },
-
-
-  {'name': "TSP 45 <br> Granulé <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': ' -10%' ,
-     'link' : 'tsp-45/p289',
-    'alt' : "TSP 45 - Granulé", 
-     'img' : 'https://www.agriconomie.com/media/cache/130x130/28/cb/9476e5486a08f900b98cde528f6c.jpg',
-     'btn' : 'Voir les prix'  },
-
-       {'name': "Chlorure de potasse <br> Granulé <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': ' -10%' ,
-     'link' : 'chlorure-de-potasse/p6',
-    'alt' : "Chlorure de potasse - Granulé", 
-     'img' : 'https://www.agriconomie.com/media/cache/130x130/28/d6/d75d736a07986d8ec1b7b1294b01.jpg',
-     'btn' : 'Voir les prix'  }
-
-
-
-
-  ])
-
-
+  +title("Comment bénéficier de cette offre ?")
 
   tr
-    td &nbsp;
+    td(width="100%")
+      table(width="75%" align="center")
+        tr
+          td Je vous ai préparé une offre pour vos approvisionnements en nutrition animale
+        tr
+          td &nbsp;
+        tr
+          td Pour bénéficier de cette remise, il vous suffit de cliquer ici ou de renseigner le code promo :
+        tr
+          td &nbsp;
+        tr
+          td(width="100%")
+            a(style="text-decoration:none; color:black;" href!="https://www.agriconomie.com/voucher/NUTRITION100" + meta )
+              table(border="0" width="40%" align="center"  style="background: #ffc70c;" )
+                tr
+                  td(height="10" style="font-size:5px; line-height:5px;") &nbsp;
+                tr
+                  td( align="center" )
+                    b(style="font-size:20px;") NUTRITION100
+                tr
+                  td(height="10" style="font-size:5px; line-height:5px;") &nbsp;
+        tr
+          td &nbsp;
+        tr
+          td lors de l'étape 4 de votre commande dans le champ "Code promo" situé sur le côté gauche.
+        tr
+          td &nbsp;
+        tr
+          td Cette remise s'applique donc sur vos achats de tourteaux, aliments d'allaitements, aliments minérals, solutions nutritionnelles, matières premières minérales...
+        tr
+          td &nbsp;
+        tr
+          td 
+            | Ce code est valable du 
+            b 21 juin 2018 au 31 juillet 2018 
+            | sur tous les produits portant la mention "Expédié par Agriconomie" ou par l'icône 
+            span(style="color: #ffc70c; font-weight: bold;") A 
+            | (utilisable une seule fois), pour toute commande supérieure 1500€ HT d'achat sur la gamme Nutrition animale.
 
-  +produit__4([ 
-  {'name': "Soufre - thiosulfate <br> d'ammonium - Liquide <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': '-5%' ,
-     'link' : 'soufre-thiosulfate-d-ammonium/p265452',
-     'alt' : "Soufre - thiosulfate d'ammonium - Liquide",
-     'img' : 'https://www.agriconomie.com/media/cache/130x130/f1/11/e4a46a620ba41aa8711848c66f24.jpg',
-     'btn' : 'Voir les prix'  }, 
+        tr
+          td &nbsp;
+
+        tr
+          td 
+           | N'hésitez pas à me contacter au 
+           b(style="font-size:16px;") 03.52.99.00.13 
+           | pour toute question. 
 
 
 
-       {'name': "Bicarbonate de  <br> Potassium Cristal <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': '-6€/T' ,
-     'link' : "bicarbonate-de-potassium/p340180",
-     'alt' : "Bicarbonate de Potassium - Cristal",
-     'img' : 'https://www.agriconomie.com/media/cache/130x130//74/16/1de9114f36a339d4e443910f6091.jpeg',
-     'btn' : 'Voir les prix'  }, 
+
+  //- +produit__3([ 
 
 
-       {'name': " 26-0-0 +20SO3 <br> Bulk granulé <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': '-6€/T' ,
-     'link' : '26-0-0-20so3/p340871',
-    'alt' : "26-0-0 +20SO3 - Bulk granulé", 
-     'img' : 'https://www.agriconomie.com/media/cache/130x130//e0/8e/d9b7b4e3f1c8e964df89d5b87515.jpeg',
-     'btn' : 'Voir les prix'  },
-
-            {'name': " Compost (fientes / lisier) <br> 1.8-2.2-1.6 - Criblé <br> &nbsp;",
-   'promo__title': "none",
-    'promo__value': '-6€/T' ,
-     'link' : 'compost-1-8-2-2-1-6/p211305',
-    'alt' : "Compost (fientes / lisier) 1.8-2.2-1.6 - Criblé", 
-     'img' : 'https://www.agriconomie.com/media/cache/130x130/6d/54/5d84afa2b78f27e1afbc905ce94f.jpg',
-     'btn' : 'Voir les prix'  }
+  //-           {'name': "MILKYPRO  <br> Exelium 50 <br> &nbsp;",
+  //-  'promo__title': "Jusqu'à",
+  //-   'promo__value': '-2€/T' ,
+  //-    'link' : 'lactigo-tradi-50/p322690',
+  //-   'alt' : "MILKYPRO Exelium 50", 
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130//c8/6d/4f7ee08abaf191e7855e10d191b1.jpeg',
+  //-    'btn' : 'Voir le produit'  },
 
 
+  //-      {'name': "MILKYPRO <br> SUPER 60 <br> &nbsp;",
+  //-  'promo__title': "Jusqu'à",
+  //-   'promo__value': '-2€/T' ,
+  //-    'link' : 'milkypro-super-60/p335269#_campaign=cat_resultat_produit',
+  //-   'alt' : "MILKYPRO SUPER 60", 
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130//45/63/ac896910fb9b1e0949822d6a92b6.jpeg',
+  //-    'btn' : 'Voir le produit'  },
 
-  ]) 
+
+  //- {'name': "T8-23 REPRO <br>SANTE Semoule <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': ' -10%' ,
+  //-    'link' : '8-23-repro-sante-semoule-sac/p318118?variant=395806',
+  //-   'alt' : "8-23 REPRO SANTE Semoule", 
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130//61/10/c00f9bece620bfef204151421800.jpeg',
+  //-    'btn' : 'Voir le produit'  }
+
+
+
+
+  //- ])
+
+
+
+  //- tr
+  //-   td &nbsp;
+
+  //- +produit__3([ 
+  //- {'name': "Tourteau <br>de colza <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': '-5%' ,
+  //-    'link' : 'engrais/pc975',
+  //-    'alt' : "Tourteau de colza",
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130/9e/4c/4b66f26de270d82120ae385ce8da.jpeg',
+  //-    'btn' : 'Voir les prix'  }, 
+
+
+
+  //-      {'name': "Tourteau de soja<br> 49% GM <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': '-6€/T' ,
+  //-    'link' : "tourteau-soja-49/p255309#_campaign=cat_resultat_produit",
+  //-    'alt' : "Tourteau de soja 49% GM",
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130/9a/b0/089aebd0b80f004edbfa0ceb6263.jpeg',
+  //-    'btn' : 'Voir les prix'  }, 
+
+
+  //-      {'name': "Propylène glycol <br>précurseurs de glucose <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': '-6€/T' ,
+  //-    'link' : 'propylene-glycol-tres-appetent-et-concentre-propitonic/p273140',
+  //-   'alt' : "Propylène glycol et précurseurs de glucose très appétents - PropiTonic", 
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130/27/2a/9187ebd8d3bce03890bd7cfd982d.jpeg',
+  //-    'btn' : 'Voir les prix'  }
+
+
+
+  //- ])
+
+  //- tr
+  //-   td &nbsp;
+
+  //- +produit__3([ 
+
+
+
+  //-      {'name': "Bicarbonate <br> de Sodium <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': '-6€/T' ,
+  //-    'link' : "bicarbonate-de-sodium/p315127",
+  //-    'alt' : "Bicarbonate de Sodium",
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130/c8/97/799205543bdd881aefe644c64a69.jpeg',
+  //-    'btn' : 'Voir le produit'  }, 
+
+
+  //- {'name': "Minéral Premium <br>5/22-23 avec levures <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': '-5%' ,
+  //-    'link' : 'agriconomie-premium-22-5-avec-levures/p338200',
+  //-    'alt' : "Minéral Premium 5/22-23 avec levures",
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130//1f/22/6634a59984801cbd4593d804b05f.jpeg',
+  //-    'btn' : 'Voir le produit'  }, 
+
+
+
+
+  //-      {'name': " Lithothamne <br> &nbsp; <br> &nbsp;",
+  //-  'promo__title': "none",
+  //-   'promo__value': '-6€/T' ,
+  //-    'link' : 'litho-medium/p315136',
+  //-   'alt' : "Lithothamne", 
+  //-    'img' : 'https://www.agriconomie.com/media/cache/130x130/d8/f0/0b9ad369368d93be45880847cc80.jpeg',
+  //-    'btn' : 'Voir le produit'  }
+
+
+
+  //- ]) 
 
 
   tr
@@ -324,4 +407,4 @@ block produits
 
 block footer
   include mixins/footer__expert.pug
-  +footer__expert('margaux')
+  +footer__expert('bertrand')
