--- a/vF-responsible/app/views/layout/layout.pug
+++ b/vF-responsible/app/views/layout/layout.pug
@@ -4,7 +4,7 @@ if lang == "fr"
   - var baseline = "Agriconomie, le site partenaire des agriculteurs français"
   - var headerUrl = "vf-baseline-fr.jpg"
 else
-  - var BaseUrl = "https://www.agriconomie.be/fr/";
+  - var BaseUrl = "https://www.agriconomie.be/fr_BE/";
   - var baseline = "Agriconomie, le site partenaire des agriculteurs Belges"
   - var headerUrl = "vf-baseline-be.jpg"
 
