--- a/vF-responsible/app/views/mixins/sources.pug
+++ b/vF-responsible/app/views/mixins/sources.pug
@@ -11,7 +11,7 @@ mixin sources(source)
       tr
         td(width='70%', style='font-family: Helvetica, Arial, sans-serif; font-size: 9px; line-height: 14px; color: rgb(153, 153, 153);', align='center')
           | Vous recevez cet email car vous êtes inscrit sur notre liste de diffusion. Suivez ce 
-          a(href='#UNSUBSCRIBE_HREF#', target='_blank', style='color: rgb(153, 153, 153);') lien
+          a(href='#UNSUBSCRIBE_HREF#', target='_blank', style='color: rgb(153, 153, 153); text-decoration:underline; ') lien
           |  pour vous désinscrire de cette liste de diffusion. Conformément à la loi Informatique et Liberté du 6 janvier 1978, vous disposez d’un droit de suppression des données vous concernant.
       tr
         td(width='70%', style='font-family: Helvetica, Arial, sans-serif; font-size: 9px; line-height: 14px; color: rgb(153, 153, 153);', align='center')
