--- a/club-responsible/app/views/mixins/promoClub.pug
+++ b/club-responsible/app/views/mixins/promoClub.pug
@@ -14,10 +14,10 @@ mixin promoClub(url, txt, img, alt, btn)
                 tr.ShowInMobile(style='display: none;')
                   td(style='border-collapse: collapse;')
                 tr
-                  td(style='border-collapse: collapse; font-size: 10px; line-height: 10px;')
+                  td(style='border-collapse: collapse; font-size: 10px; line-height: 10px;') &nbsp;
                 != txt
                 tr
-                  td(style='border-collapse: collapse; font-size: 10px; line-height: 10px;')
+                  td(style='border-collapse: collapse; font-size: 10px; line-height: 10px;') &nbsp;
                 tr
                   td.club__promo_description--btn(align='center', width='100%', style='background-color: rgb(82, 196, 125); border: 1px solid rgb(82, 196, 125); border-collapse: collapse; border-radius: 3px; color: rgb(255, 255, 255); display: block; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: bold; line-height: 40px; text-align: center; text-decoration: none;')
                     table(border='0', cellspacing='0', cellpadding='0', align='center', width='100%', style='border-collapse: collapse;')
@@ -30,4 +30,4 @@ mixin promoClub(url, txt, img, alt, btn)
                           != "<![endif]-->"
                           a(href='https://www.agriconomie.com/'+ url + utm, style='text-size-adjust: none; background-color: rgb(82, 196, 125); border: 1px solid rgb(82, 196, 125); border-radius: 3px; color: rgb(255, 255, 255); display: inline-block; font-family: sans-serif; font-size: 14px; font-weight: bold; line-height: 30px; text-align: center; text-decoration: none; width: 95%;')= btn
                 tr.showInMobile
-                  td(style='border-collapse: collapse;')
+                  td(style='border-collapse: collapse;') &nbsp;
