--- a/vF-responsible/app/views/mixins/service_3.pug
+++ b/vF-responsible/app/views/mixins/service_3.pug
@@ -1,4 +1,4 @@
-mixin produit__2(txt)
+mixin service__3(txt)
   - String.prototype.count=function(c) { var result = 0, i = 0; for(i;i<this.length;i++)if(this[i]==c)result++; return result };
   // start4products
   tr
@@ -16,47 +16,28 @@ mixin produit__2(txt)
                 - Ocurrence--;
               if (finalUrl.indexOf('redirect') !== -1 &&  finalUrl.indexOf('sort') !== -1)
                 - finalUrl.replace("&sort", "?sort");  
-              td.products__unit.products__unit--big(width='50%', align='center')
+              td.products__unit.products__unit--big(width='25%', align='center')
                 table.products__body(align='center', cellpadding='0', cellspacing='0', border='0', width='100%')
                   tbody
-                    tr.products__promo
-                      td
-                        table.products__promo(height='25', align='center', cellpadding='0', cellspacing='0', border='0', width='100%')
-                          tbody
-                            tr
-                              if produit.promo__title == 'none'
-                                td(width='100%', align='center') &nbsp;
-                              else if produit.promo__title == 'big'
-                                td( style='background-color: #fc5d6a; color:white; ' width='100%', align='center')!= produit.promo__value
-                              else
-                                td(width='60%', align='center')!= produit.promo__title 
-                                td(width='40%', align='center')!= produit.promo__value                        
                     tr
-                      td.products__blank  
+                      td.products__blank
                     tr
                       td(align='center')
                         a(href=  finalUrl, target='_blank')
-                          img(alt= produit.alt, src=produit.img, width='100', height='100', border='0', style='display:block')
+                          img(alt= produit.alt, src=produit.img, width='100', height='100', border='0', style='display:block; max-width:100')
                     tr
-                      td.products__blank  
+                      td.products__blank
                     tr
-                      td.products__txt(align='center', width='100%')!= produit.name
-                        br
-                    //- tr
-                    //-   td.products__price
-                    //-     table(width='100%')
-                    //-       tbody
-                    //-         tr
-                    //-           if produit.price.old.entier != 'none'
-                    //-             td.products__price--old(align='center')
-                    //-               strike= produit.price.old.entier
-                    //-                 sup= produit.price.old.dec + 'HT'
-
-                    //-           td.products__price--new(align='center')
-                    //-             b= produit.price.new.entier
-                    //-               sup= produit.price.new.dec + 'HT'
-                    //- tr
-                    //-   td.products__blank                                
+                      td(align="center" style="color: #ffc70c; font-weight: bold; text-transform: uppercase;")!= produit.title 
+                    tr
+                      td.products__blank
+                    tr
+                      td(width="100%" align="center")
+                        table(align='center', cellpadding='0', cellspacing='0', border='0', width='95%')
+                          tr
+                            td(align="center")!= produit.txt 
+                    tr
+                      td.products__blank
                     tr
                       td.products__btn(align='center', width='100%', style='border-collapse: collapse; mso-line-height-rule: exactly;')
                         table(border='0', cellspacing='0', cellpadding='0', align='center', width='100%', style='border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;')
